# test

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/: contributing.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml
bruno/: bruno.json  health_check.bru
bruno/auth/: activate_account.bru  forgot_password.bru  login.bru  logout.bru  register.bru  resend_activation_email.bru  reset_password.bru
bruno/board/: create_board.bru  folder.bru
bruno/user/: get_profile.bru
entity/: Cargo.toml
entity/src/: board.rs  board_member.rs  column.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  task.rs  user.rs
migration/src/: lib.rs  m20251102_200527_create_user_table.rs  m20251102_201124_create_board_table.rs  m20251102_201821_create_column_table.rs  m20251102_202640_create_task_table.rs  m20251108_111856_create_board_member_table.rs
src/: main.rs
src/application/dto/: auth_dto.rs  board_dto.rs  board_member_dto.rs  column_dto.rs  mod.rs  task_dto.rs  user_dto.rs
src/application/services/: auth_service.rs  board_service.rs  column_service.rs  mod.rs  task_service.rs  user_service.rs  websocket_service.rs
src/domain/: mod.rs
src/domain/events/: board_event.rs  event_bus.rs  mod.rs
src/domain/repositories/: board_member_repository.rs  board_repository.rs  column_repository.rs  mod.rs  task_repository.rs  user_repository.rs
src/domain/services/: email_service.rs  mod.rs  token_service.rs
src/infrastructure/: mod.rs
src/infrastructure/cache/: mod.rs  token_service_impl.rs
src/infrastructure/email/: email_service_impl.rs  mod.rs
src/infrastructure/event_bus/: in_memory_event_bus.rs
src/infrastructure/persistence/: board_member_repository_impl.rs  board_repository_impl.rs  column_repository_impl.rs  database.rs  mod.rs  task_repository_impl.rs  user_repository_impl.rs
src/presentation/: mod.rs
src/presentation/http/: auth_controller.rs  board_controller.rs  column_controller.rs  mod.rs  openapi.rs  server.rs  task_controller.rs  user_controller.rs  websocket_controller.rs
src/presentation/middleware/: auth_middleware.rs  mod.rs
src/shared/: error.rs  mod.rs  response.rs
src/shared/config/: app_state.rs  mod.rs  startup.rs
src/shared/utils/: activation.rs  argon.rs  constants.rs  email.rs  fractional_indexing.rs  mod.rs  password.rs
templates/emails/activation/: html_template.html  text_template.txt
templates/emails/password_reset/: html_template.html  text_template.txt
