[package]
name = "kanban_be"
version = "0.1.0"
edition = "2024"
description = "REST API backend for a Kanban application"
repository = "https://github.com/mysci4k/kanban_be"
license = "MIT"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.11.0"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
chrono = "0.4.42"
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
regex = "1.12.2"
argon2 = { version = "0.5.3", features = ["std"] }
