[package]
name = "kanban_be"
version = "0.1.0"
edition = "2024"
description = "REST API backend for a Kanban application"
repository = "https://github.com/mysci4k/kanban_be"
license = "MIT"

[workspace]
members = [".", "entity", "migration"]

[dependencies]
entity = { path = "entity" }
migration = { path = "migration" }
actix-web = "4.11.0"
actix-ws = "0.3.0"
actix-session = { version = "0.11.0", features = ["redis-session-rustls"] }
actix-identity = "0.9.0"
dotenvy = "0.15.7"
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
sea-orm = { version = "1.1.17", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-query = "0.32.7"
uuid = { version = "1.18.1", features = ["serde", "v7"] }
chrono = "0.4.42"
derive_more = { version = "2.0.1", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
validator = { version = "0.20.0", features = ["derive"] }
async-trait = "0.1.89"
regex = "1.12.2"
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "0.32.7", features = ["tokio-rustls-comp"] }
lettre = { version = "0.11.19", features = ["tokio1-native-tls"] }
hex = "0.4.3"
tera = "1.20.1"
futures-util = "0.3.31"
tokio = { version = "1.48.0", features = ["full"] }
utoipa = { version = "5.4.0", features = ["actix_extras", "uuid", "chrono", "preserve_order", "preserve_path_order"] }
utoipa-scalar = { version = "0.3.0", features = ["actix-web"] }
